--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,24 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo test Hello, World!"
+  say-bye:
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say Bye"
+          command: "echo Bye, World!"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
+    jobs:
+      - say-hello
+      - say-bye
+  say-bye-workflow:
     jobs:
       - say-hello
